# MyFeedMemory

./: .gitignore  .pre-commit-config.yaml  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt  run_auth.py
.github/: PULL_REQUEST_TEMPLATE.md
src/myfeedmemory/: __init__.py
src/myfeedmemory/auth/: __init__.py  linkedinoauth.py
src/myfeedmemory/cli/: __init__.py  authorize_linkedin.py
tests/: test_oauth_flow.py  test_openrouter_connection.py
