[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myfeedmemory"
version = "0.1.0"
description = "A LinkedIn content ingestion and search prototype with LangChain/LangGraph future integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "python-dotenv",
  "pytest",
  "uv",
]

[project.scripts]
myfeedmemory-fetch = "myfeedmemory.cli.fetch_linkedin:main"

[tool.setuptools.packages.find]
where = ["src"]
